--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,8 @@
 [tox]
 minversion = 3.5
 # relies on the correct version of Python installed
-envlist = tests,mypy
+envlist = mypy
+# TODO enable tests later
 # https://github.com/tox-dev/tox/issues/20#issuecomment-247788333
 # hack to prevent .tox from crapping to the project directory
 toxworkdir={env:TOXWORKDIR_BASE:}{toxinidir}/.tox
